nextcloud/overlays/jern.fi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  template:
    spec:
      containers:
      - name: nextcloud
        livenessProbe:
          httpGet:
            httpHeaders:
            - name: Host
              value: nextcloud.jern.fi
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: Host
              value: nextcloud.jern.fi
        resources:
          requests:
            cpu: 200m
            memory: 400Mi
          limits:
            cpu: 2500m
            memory: 1Gi
