nextcloud/overlays/jern.fi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  ingressClassName: nginx
  tls:
  - secretName: nextcloud-cert
    hosts:
    - nextcloud.jern.fi
  rules:
  - host: nextcloud.jern.fi
    http:
      paths:
      - backend:
          service:
            name: nextcloud
            port:
              name: http
        path: /
        pathType: Prefix
# Nextcloud recommends rewriting /.wellknown/carddav and /.wellknown/caldav
# to /remote.php/dav since some clients have trouble with this.
# See https://docs.nextcloud.com/server/21/admin_manual/issues/general_troubleshooting.html#service-discovery
# This does not seem to work
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nextcloud-service-discovery-rewrite
# spec:
#   tls:
#     - secretName: nextcloud-cert
#       hosts:
#         - nextcloud.jern.fi
#   rules:
#     - host: nextcloud.jern.fi
#       http:
#         paths:
#           - backend:
#               service:
#                 name: nextcloud
#                 port:
#                   name: http
#             path: /.wellknown/carddav
#             pathType: Exact
#           - backend:
#               service:
#                 name: nextcloud
#                 port:
#                   name: http
#             path: /.wellknown/caldav
#             pathType: Exact
---
